--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       gtag('js', new Date());
       gtag('config', 'G-ZFZJ9E2Q9D');
     </script>
+    <!-- Apple MusicKit JS -->
+    <script src="https://js-cdn.music.apple.com/musickit/v3/musickit.js" async></script>
   </head>
   <body>
     <div id="root"></div>
